--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ ENV/
 env.bak/
 venv.bak/
 
+# Visual studio code projecrt settings
+.vscode
+
 # Spyder project settings
 .spyderproject
 .spyproject
