--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom added
+tmp/
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -109,9 +113,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
-# Visual studio code projecrt settings
-.vscode
 
 # Spyder project settings
 .spyderproject
