--- a/environment-vector-ops.yml
+++ b/environment-vector-ops.yml
@@ -1,16 +1,14 @@
-name: geobenchmark
+name: geobenchmark-vector-ops
 channels:
   - conda-forge
 dependencies:
-  - python=3.10
+  - python=3.11
   - pip
   # required
   - dask-geopandas
   - geofileops
   - geopandas
-  - geowombat
-  - pygeoprocessing
-  - rasterstats
+  - pyogrio
   # linting
   - black =23
   - ruff
