--- a/environment-zonalstats-qgis.yml
+++ b/environment-zonalstats-qgis.yml
@@ -1,4 +1,4 @@
-name: geobenchmark
+name: zonalstats-qgis
 channels:
   - conda-forge
 dependencies:
@@ -7,8 +7,7 @@ dependencies:
   # required
   - geofileops
   - geopandas
-  - geowombat
-  - pygeoprocessing
+  - qgis
   - rasterstats
   # linting
   - ruff
