--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,15 +1,13 @@
 # This workflow will install Python dependencies and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Tests
+name: Linting
 
 on:
   push:
     branches: [ main, 0.** ]
   pull_request:
     branches: [ main, 0.** ]
-  schedule:
-    - cron: "0 0 * * *"
 
 concurrency: 
   group: ${{ github.workflow }}-${{ github.ref }}
