--- a/project.toml
+++ b/project.toml
@@ -3,7 +3,7 @@ exclude = ["local_ignore"]
 ignore = ["*"]
 
 [[tool.mypy.overrides]]
-module = "geopandas.*,matplotlib.*,pyogrio.*,setuptools.*,shapely.*"
+module = ["geopandas.*", "matplotlib.*", "pyogrio.*" , "setuptools.*", "shapely.*"]
 ignore_missing_imports = true
 
 [tool.ruff]
